--- a/miami/site/views/partials/heading.handlebars
+++ b/miami/site/views/partials/heading.handlebars
@@ -1,6 +1,6 @@
 {{!-- This #if is a helper to evaluate if the variable or expression exists --}}
-{{#if image}}
-<img class="hero img-fluid" src="/images/{{image}}" alt="">
+{{#if data.image}}
+<img class="hero img-fluid" src="{{data.image}}" alt="">
 {{/if}}
-<h1 class="primary-heading">{{title}}</h1>
-<p class="abstract">{{abstract}}</p>
+<h1 class="primary-heading">{{data.title}}</h1>
+<p class="abstract">{{data.abstract}}</p>
