--- a/madlibs/views/layouts/main.handlebars
+++ b/madlibs/views/layouts/main.handlebars
@@ -8,6 +8,11 @@
 </head>
 <body>
     <div class="container">
+        <ul>
+            <li><a href="/newsletter-signup">Newsletter Signup</a> </li>
+            <li><a href="/newsletter/list">Newsletter List</a></li>
+        </ul>
+
     {{{body}}}
     </div>
 </body>
